// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color prop when type is range 1`] = `
<div class="r-calendar">
  <div class="r-calendar__header">
    <div class="r-calendar__header-title">
      Calendar
    </div>
    <div class="r-calendar__header-subtitle">
    </div>
    <div class="r-calendar__weekdays">
      <span class="r-calendar__weekday">
        Sun
      </span>
      <span class="r-calendar__weekday">
        Mon
      </span>
      <span class="r-calendar__weekday">
        Tue
      </span>
      <span class="r-calendar__weekday">
        Wed
      </span>
      <span class="r-calendar__weekday">
        Thu
      </span>
      <span class="r-calendar__weekday">
        Fri
      </span>
      <span class="r-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="r-calendar__body">
    <div class="r-calendar__month">
      <div role="grid"
           class="r-calendar__days"
      >
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
        <div class="r-calendar__day"
             style="width: 100%;"
        >
        </div>
      </div>
    </div>
  </div>
  <div class="r-calendar__footer r-safe-area-bottom">
    <button type="button"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
            style="color: white; background: blue; border-color: blue;"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`color prop when type is single 1`] = `
<div class="r-calendar">
  <div class="r-calendar__header">
    <div class="r-calendar__header-title">
      Calendar
    </div>
    <div class="r-calendar__header-subtitle">
    </div>
    <div class="r-calendar__weekdays">
      <span class="r-calendar__weekday">
        Sun
      </span>
      <span class="r-calendar__weekday">
        Mon
      </span>
      <span class="r-calendar__weekday">
        Tue
      </span>
      <span class="r-calendar__weekday">
        Wed
      </span>
      <span class="r-calendar__weekday">
        Thu
      </span>
      <span class="r-calendar__weekday">
        Fri
      </span>
      <span class="r-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="r-calendar__body">
    <div class="r-calendar__month">
      <div role="grid"
           class="r-calendar__days"
      >
        <div class="r-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--selected"
             tabindex="-1"
        >
          <div class="r-calendar__selected-day"
               style="background: blue;"
          >
            10
          </div>
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="r-calendar__footer r-safe-area-bottom">
    <button type="button"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
            style="color: white; background: blue; border-color: blue;"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`formatter prop 1`] = `
<div class="r-calendar">
  <div class="r-calendar__header">
    <div class="r-calendar__header-title">
      Calendar
    </div>
    <div class="r-calendar__header-subtitle">
    </div>
    <div class="r-calendar__weekdays">
      <span class="r-calendar__weekday">
        Sun
      </span>
      <span class="r-calendar__weekday">
        Mon
      </span>
      <span class="r-calendar__weekday">
        Tue
      </span>
      <span class="r-calendar__weekday">
        Wed
      </span>
      <span class="r-calendar__weekday">
        Thu
      </span>
      <span class="r-calendar__weekday">
        Fri
      </span>
      <span class="r-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="r-calendar__body">
    <div class="r-calendar__month">
      <div role="grid"
           class="r-calendar__days"
      >
        <div class="r-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--selected"
             tabindex="-1"
        >
          <div class="r-calendar__selected-day">
            10
          </div>
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          <div class="r-calendar__top-info">
            Top Info
          </div>
          11
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          12
          <div class="r-calendar__bottom-info">
            Bottom Info
          </div>
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          Text
        </div>
        <div role="gridcell"
             class="r-calendar__day test"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="r-calendar__footer r-safe-area-bottom">
    <button type="button"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`popup wrapper 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
</transition-stub>
<transition-stub name="r-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
</transition-stub>
`;

exports[`popup wrapper 2`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div style="z-index: 2001;"
       class="r-overlay"
  >
  </div>
</transition-stub>
<transition-stub name="r-popup-slide-bottom"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div style="z-index: 2001;"
       role="dialog"
       tabindex="0"
       class="r-popup r-popup--round r-popup--bottom r-calendar__popup"
  >
    <div class="r-calendar">
      <div class="r-calendar__header">
        <div class="r-calendar__header-title">
          Calendar
        </div>
        <div class="r-calendar__header-subtitle">
        </div>
        <div class="r-calendar__weekdays">
          <span class="r-calendar__weekday">
            Sun
          </span>
          <span class="r-calendar__weekday">
            Mon
          </span>
          <span class="r-calendar__weekday">
            Tue
          </span>
          <span class="r-calendar__weekday">
            Wed
          </span>
          <span class="r-calendar__weekday">
            Thu
          </span>
          <span class="r-calendar__weekday">
            Fri
          </span>
          <span class="r-calendar__weekday">
            Sat
          </span>
        </div>
      </div>
      <div class="r-calendar__body">
        <div class="r-calendar__month">
          <div role="grid"
               class="r-calendar__days"
          >
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
            <div class="r-calendar__day"
                 style="width: 100%;"
            >
            </div>
          </div>
        </div>
      </div>
      <div class="r-calendar__footer r-safe-area-bottom">
        <button type="button"
                class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
        >
          <div class="r-button__content">
            <span class="r-button__text">
              Confirm
            </span>
          </div>
        </button>
      </div>
    </div>
    <i class="r-badge__wrapper r-icon r-icon-cross r-popup__close-icon r-popup__close-icon--top-right r-haptics-feedback"
       role="button"
       tabindex="0"
    >
    </i>
  </div>
</transition-stub>
`;

exports[`row-height prop 1`] = `
<div class="r-calendar">
  <div class="r-calendar__header">
    <div class="r-calendar__header-title">
      Calendar
    </div>
    <div class="r-calendar__header-subtitle">
    </div>
    <div class="r-calendar__weekdays">
      <span class="r-calendar__weekday">
        Sun
      </span>
      <span class="r-calendar__weekday">
        Mon
      </span>
      <span class="r-calendar__weekday">
        Tue
      </span>
      <span class="r-calendar__weekday">
        Wed
      </span>
      <span class="r-calendar__weekday">
        Thu
      </span>
      <span class="r-calendar__weekday">
        Fri
      </span>
      <span class="r-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="r-calendar__body">
    <div class="r-calendar__month">
      <div role="grid"
           class="r-calendar__days"
      >
        <div class="r-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="height: 50px; margin-left: 71.42857142857143%;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--selected"
             tabindex="-1"
        >
          <div class="r-calendar__selected-day"
               style="width: 50px; height: 50px;"
          >
            10
          </div>
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             style="height: 50px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="height: 50px; margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="r-calendar__footer r-safe-area-bottom">
    <button type="button"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`should render confirm-text slot correctly 1`] = `
<button type="button"
        class="r-button r-button--primary r-button--normal r-button--block r-button--round r-calendar__confirm"
>
  <div class="r-button__content">
    <span class="r-button__text">
      Custom confirm text false
    </span>
  </div>
</button>
`;

exports[`should render subtitle slot with params 1`] = `
<div class="r-calendar__header-subtitle">
  Custom Subtitle
</div>
`;

exports[`should render title、footer、subtitle slot correctly 1`] = `
<div class="r-calendar">
  <div class="r-calendar__header">
    <div class="r-calendar__header-title">
      Custom Title
    </div>
    <div class="r-calendar__header-subtitle">
      Custom Subtitle
    </div>
    <div class="r-calendar__weekdays">
      <span class="r-calendar__weekday">
        Sun
      </span>
      <span class="r-calendar__weekday">
        Mon
      </span>
      <span class="r-calendar__weekday">
        Tue
      </span>
      <span class="r-calendar__weekday">
        Wed
      </span>
      <span class="r-calendar__weekday">
        Thu
      </span>
      <span class="r-calendar__weekday">
        Fri
      </span>
      <span class="r-calendar__weekday">
        Sat
      </span>
    </div>
  </div>
  <div class="r-calendar__body">
    <div class="r-calendar__month">
      <div role="grid"
           class="r-calendar__days"
      >
        <div class="r-calendar__month-mark">
          1
        </div>
        <div role="gridcell"
             style="margin-left: 71.42857142857143%;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          1
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          2
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          3
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          4
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          5
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          6
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          7
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          8
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          9
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--selected"
             tabindex="-1"
        >
          <div class="r-calendar__selected-day">
            10
          </div>
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          11
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          12
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          13
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          14
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          15
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          16
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          17
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          18
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          19
        </div>
        <div role="gridcell"
             class="r-calendar__day"
             tabindex="-1"
        >
          20
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          21
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          22
        </div>
        <div role="gridcell"
             class="r-calendar__day r-calendar__day--disabled"
        >
          23
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          24
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          25
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          26
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          27
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          28
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          29
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          30
        </div>
        <div role="gridcell"
             style="margin-bottom: 0px;"
             class="r-calendar__day r-calendar__day--disabled"
        >
          31
        </div>
      </div>
    </div>
  </div>
  <div class="r-calendar__footer r-safe-area-bottom">
    Custom Footer
  </div>
</div>
`;

exports[`should render top-info and bottom-info slot correctly 1`] = `
<div role="gridcell"
     style="margin-left: 71.42857142857143%;"
     class="r-calendar__day r-calendar__day--disabled"
>
  <div class="r-calendar__top-info">
    top: 1
  </div>
  1
  <div class="r-calendar__bottom-info">
    bottom: 1
  </div>
</div>
`;
